<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/create_account">

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="16dp"
            android:visibility="invisible" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/firstname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="21dp"
        android:text="@string/first_name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <EditText
        android:id="@+id/firstname_edittext"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints="name"
        android:background="@drawable/textbox_bg"
        android:hint="Dasha"
        android:inputType="textPersonName"
        android:paddingHorizontal="10dp"
        android:paddingVertical="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstname_text" />

    <TextView
        android:id="@+id/lastname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/last_name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstname_edittext" />

    <EditText
        android:id="@+id/lastname_edittext"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints="name"
        android:background="@drawable/textbox_bg"
        android:hint="Kotenok"
        android:inputType="textPersonName"
        android:paddingHorizontal="10dp"
        android:paddingVertical="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastname_text" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastname_edittext" />

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/textbox_bg"
        android:hint="example@gmail.com"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="10dp"
        android:paddingVertical="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_text" />

    <TextView
        android:id="@+id/phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/phone_number"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_edittext" />

    <EditText
        android:id="@+id/phone_edittext"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/textbox_bg"
        android:digits="0123456789+()- "
        android:hint="+7 (911) 906-47-15"
        android:inputType="phone"
        android:paddingHorizontal="10dp"
        android:paddingVertical="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_text" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_edittext" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="emailAddress"
            android:background="@drawable/textbox_bg"
            android:hint="8 characters minimum"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/selected_dot_gradient"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@id/log_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/log_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="Log In"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>